# synatyx

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.local.yml  docker-compose.yml  install_deps.py  main.py  pyproject.toml  railway.toml
.augment/rules/: synatyx-memory.md
.claude/: CLAUDE.md
.claude/skills/: synatyx-memory.md
.cursor/rules/: synatyx-memory.mdc
alembic/: env.py
alembic/versions/: 24bff5aac84e_add_tasks_table.py  5e6ac71562a6_init_sessions_user_profiles_audit_log.py  d7e1f3b2c804_add_gc_log_table.py  f3a9c812d047_add_skills_table.py
docs/: architecture.md  local-setup.md  mcp-tools.md
src/: config.py
src/core/: __init__.py  bm25.py  budget.py  chunker.py  embedder.py  gc.py  ingest.py  mmr.py  project.py  retrieve.py  score.py  skill.py  store.py  summarize.py
src/models/: __init__.py  context.py  memory_layer.py  session.py  skill.py  task.py
src/parsers/: base.py  code.py  docx.py  markdown.py  pdf.py  registry.py  web.py
src/storage/: __init__.py  postgres.py  qdrant.py  redis.py
src/transports/graphql/: __init__.py  server.py
src/transports/graphql/schema/: mutations.py  queries.py  subscriptions.py  types.py
src/transports/mcp/: __init__.py  http_server.py  server.py  tools.json  tools.py
src/transports/mcp/adapters/: anthropic.py  openai.py
tests/: test_bm25.py  test_budget.py  test_chunker.py  test_mmr.py  test_score.py
