[project]
name = "synatyx"
version = "0.1.0"
description = "Open-source Context Engine for LLMs — persistent, relevance-scored memory layer"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Vector DB
    "qdrant-client>=1.10.0",

    # Cache & Pub/Sub
    "redis[hiredis]>=5.0.0",

    # PostgreSQL (async)
    "asyncpg>=0.29.0",

    # Kafka
    "aiokafka>=0.11.0",

    # Embeddings
    "sentence-transformers>=3.0.0",
    "openai>=1.35.0",

    # MCP
    "mcp>=1.0.0",

    # GraphQL
    "strawberry-graphql[fastapi]>=0.235.0",

    # Observability
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

